--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Home</title>
     <!-- Incluindo viewport para responsividade de telas -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- Importando CSS externo -->
-    <link rel="stylesheet" href="./src/css/styles.css">
         <!-- Chamando icones externos do Footer -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Importando bootstrap no CSS via CDN-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Importando CSS externo -->
+    <link rel="stylesheet" href="./src/css/styles.css">
         <!--importando font (google fonts)-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,7 @@
 
 </head>
 
-<body>
+<body class="home">
       <header class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <img src="./src/logoektd.png" alt="logo-ekko-trend" id="logo-header">
@@ -109,7 +109,7 @@
               <div class="card-body">
                 <h5 class="card-title">EcoWear</h5>
                 <p class="card-text">A Camiseta Verde Sustentável para você</p>
-                <a href="./detalhes.html" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes.html" class="btn btn-customizado">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -120,7 +120,7 @@
               <div class="card-body">
                 <h5 class="card-title">NOMAD Conforto</h5>
                 <p class="card-text">A Camiseta Essencial para o Seu Dia a Dia</p>
-                <a href="./detalhes4.html" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes4.html" class="btn btn-customizado">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -132,7 +132,7 @@
               <div class="card-body">
                 <h5 class="card-title">Noite Verde</h5>
                 <p class="card-text">Camiseta Preta feita de Algodão Orgânico       </p>
-                <a href="./detalhes5.html" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes5.html" class="btn btn-customizado">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -151,7 +151,7 @@
               <div class="card-body">
                 <h5 class="card-title">Boné de Cortiça</h5>
                 <p class="card-text">A sua cobertura natural contra o Sol</p>
-                <a href="./detalhes6.html" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes6.html" class="btn btn-customizado">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -163,7 +163,7 @@
               <div class="card-body">
                 <h5 class="card-title">Semente da Vida</h5>
                 <p class="card-text">Pulseira feita de Madeira Artesanal</p>
-                <a href="./detalhes2.html" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes2.html" class="btn btn-customizado">Saiba mais</a>
               </div>
           </div>
       </div>
@@ -175,7 +175,7 @@
               <div class="card-body">
                 <h5 class="card-title">EcoLink</h5>
                 <p class="card-text">Colar de Madeira e Cordão Natural</p>
-                <a href="./detalhes3.html" class="btn btn-primary">Saiba mais</a>
+                <a href="./detalhes3.html" class="btn btn-customizado">Saiba mais</a>
               </div>
           </div>
       </div>
